--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   dio: ^5.4.2+1
   dart_sdk:
     git: https://github.com/TechCell-Project/dart-sdk.git
+  flutter_facebook_auth: 6.0.4
 
 dev_dependencies:
   flutter_test:
