--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   provider: ^6.1.2
   dio: ^5.4.2+1
   flutter_facebook_auth: 6.0.4
+  carousel_slider: ^4.2.1
+  badges: ^3.1.2
 
 dev_dependencies:
   flutter_test:
@@ -68,6 +70,7 @@ flutter:
     - assets/icons/
     - assets/logos/
     - assets/images/
+    - assets/images/carousel_img/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
