--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_facebook_auth: 6.0.4
   carousel_slider: ^4.2.1
   badges: ^3.1.2
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
