--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   carousel_slider: ^4.2.1
   badges: ^3.1.2
   intl: ^0.19.0
+  image_picker: ^1.1.0
+  http_parser: ^4.0.2
 
 dev_dependencies:
   flutter_test:
