--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   intl: ^0.19.0
   image_picker: ^1.1.0
   http_parser: ^4.0.2
+  flutter_widget_from_html: ^0.14.11
 
 dev_dependencies:
   flutter_test:
@@ -74,6 +75,7 @@ flutter:
     - assets/logos/
     - assets/images/
     - assets/images/carousel_img/
+    - assets/images/galaxy-z-fold-5-xanh-1.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
