--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   flutter_widget_from_html: ^0.14.11
   get: ^4.6.6
   flutter_native_splash: ^2.4.0
+  flutter_dotenv: ^5.0.2
+  google_sign_in: ^6.1.5
 
 dev_dependencies:
   flutter_test:
@@ -81,6 +83,7 @@ flutter:
     - assets/images/galaxy-z-fold-5-xanh-1.png
     - assets/images/data_empty.jpg
     - assets/images/search.jpg
+    - .env
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
